add [post]/api/v1/author
