# docs/swagger.json
@@ -43,6 +43,39 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create an author.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Author"
+                ],
+                "summary": "Create an author.",
+                "responses": {
+                    "200": {
+                        "description": "Created ID",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/author/{id}": {
@@ -210,12 +243,7 @@
         "utils.Error": {
             "type": "object",
             "properties": {
-                "errors": {
-                    "type": "object",
-                    "properties": {
-                        "message": {}
-                    }
-                }
+                "message": {}
             }
         }
     }
