# handlers/author.go
@@ -2,8 +2,11 @@ package handlers
 
 import (
 	"database/sql"
+	"errors"
 	"github.com/labstack/echo/v4"
+	"github.com/zett-8/go-clean-echo/models"
 	"github.com/zett-8/go-clean-echo/services"
+	"github.com/zett-8/go-clean-echo/utils"
 	"log"
 	"net/http"
 	"strconv"
@@ -27,7 +30,34 @@ func (h *AuthorHandler) GetAuthors(c echo.Context) error {
 
 	if err != nil {
 		log.Println(err)
-		return c.JSON(http.StatusInternalServerError, map[string]error{"message": err})
+		return c.JSON(http.StatusInternalServerError, utils.Error{Message: err})
+	}
+
+	return c.JSON(http.StatusOK, r)
+}
+
+// CreateAuthor
+// @Summary Create an author.
+// @Description Create an author.
+// @Tags Author
+// @Accept */*
+// @Produce json
+// @Success 200 {integer} integer "Created ID"
+// @Failure 400 {object} utils.Error
+// @Failure 500 {object} utils.Error
+// @Router /api/v1/author [post]
+func (h *AuthorHandler) CreateAuthor(c echo.Context) error {
+	var a *models.Author
+
+	if err := c.Bind(&a); err != nil {
+		log.Println(err)
+		return c.JSON(http.StatusBadRequest, utils.Error{Message: err})
+	}
+
+	r, err := h.AuthorService.CreateAuthor(a)
+	if err != nil {
+		log.Println(err)
+		return c.JSON(http.StatusInternalServerError, utils.Error{Message: err})
 	}
 
 	return c.JSON(http.StatusOK, r)
@@ -41,15 +71,15 @@ func (h *AuthorHandler) GetAuthors(c echo.Context) error {
 // @Produce json
 // @Param id path int true "Author id"
 // @Success 200 {string} string "OK"
-// @Failure 400 {string} string "ID is invalid"
-// @Failure 404 {string} string "Not found"
+// @Failure 400 {object} utils.Error
+// @Failure 404 {object} utils.Error
 // @Failure 500 {object} utils.Error
 // @Router /api/v1/author/{id} [delete]
 func (h *AuthorHandler) DeleteAuthorById(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		log.Println(err)
-		return c.JSON(http.StatusBadRequest, "ID is invalid")
+		return c.JSON(http.StatusBadRequest, utils.Error{Message: errors.New("ID is invalid")})
 	}
 
 	err = h.AuthorService.DeleteAuthor(id)
@@ -58,7 +88,7 @@ func (h *AuthorHandler) DeleteAuthorById(c echo.Context) error {
 		return c.JSON(http.StatusNotFound, "not found")
 	} else if err != nil {
 		log.Println(err)
-		return c.JSON(http.StatusInternalServerError, map[string]error{"message": err})
+		return c.JSON(http.StatusInternalServerError, utils.Error{Message: err})
 	}
 
 	return c.JSON(http.StatusOK, "OK")
